--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "0 0 9 * * ? "
 
 permissions:
   contents: write
